--- a/cecos-caas-agent.yml
+++ b/cecos-caas-agent.yml
@@ -1,28 +1,32 @@
 version: '3.2'
 services:
-  agent:
-    image: openfans/cecos-caas-agent:latest
-    labels:
-      - "service=openfans.cecos.caas.agent"
-    environment:
-      AGENT_CLUSTER_ADDR: tasks.cecos-caas-agent
-      AGENT_PORT: 18081
-      LOG_LEVEL: error
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    ports:
-      - target: 18081
-        published: 18081
-        protocol: tcp
-        mode: host
-    networks:
-      agent:
-        aliases:
-          - cecos-caas-agent
-    deploy:
-      labels:
-        - "service=openfans.cecos.caas.agent.service"
-      mode: global
+    agent:
+        image: openfans/cecos-caas-agent:latest
+        labels:
+            - "service=openfans.cecos.caas.agent"
+        environment:
+            AGENT_CLUSTER_ADDR: tasks.cecos-caas-agent
+            AGENT_PORT: 18081
+            LOG_LEVEL: error
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - /var/lib/docker/volumes:/var/lib/docker/volumes
+        networks:
+            agent:
+                aliases:
+                    - cecos-caas-agent
+        deploy:
+            labels:
+                - "service=openfans.cecos.caas.agent.service"
+            mode: global
+            placement:
+                constraints: [node.platform.os == linux]
+        ports:
+            - target: 18081
+            published: 18081
+            protocol: tcp
+            mode: host
 networks:
-  agent:
-    driver: overlay
+    agent:
+        driver: overlay
+        attachable: true
