--- a/cecos-caas.yml
+++ b/cecos-caas.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.2'
 services:
     agent:
         image: openfans/cecos-caas-agent:latest
@@ -10,6 +10,7 @@ services:
             LOG_LEVEL: error
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
+            - /var/lib/docker/volumes:/var/lib/docker/volumes
         networks:
             agent:
                 aliases:
@@ -18,6 +19,8 @@ services:
             labels:
                 - "service=openfans.cecos.caas.agent.service"
             mode: global
+            placement:
+                constraints: [node.platform.os == linux]
     mgmt:
         image: openfans/cecos-caas:latest
         labels:
@@ -42,8 +45,10 @@ services:
             placement:
                 constraints: [node.role == manager]
                 constraints: [node.hostname == cecos-caas]
+                constraints: [node.platform.os == linux]
 networks:
     agent:
         driver: overlay
+        attachable: true
 volumes:
         data:
