--- a/cecos-caas-agent.yml
+++ b/cecos-caas-agent.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
     agent:
-        image: openfans/cecos-caas-agent:latest
+        image: openfans/cecos-caas-agent:linux-amd64-1.1.2
         labels:
             - "service=openfans.cecos.caas.agent"
         environment:
